--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("mysql:mysql-connector-java:6.0.6")
     compile("org.springframework.boot:spring-boot-starter-actuator")
-
+    compile("org.springframework.boot:spring-boot-starter-security")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
@@ -25,6 +25,7 @@ bootRun.environment([
     "WELCOME_MESSAGE": "hello",
     "SPRING_DATASOURCE_URL": developmentDbUrl,
     "MANAGEMENT_SECURITY_ENABLED": false,
+    "HTTPS_DISABLED":true
 ])
 
 def testDbUrl = "jdbc:mysql://localhost:3306/tracker_test?user=tracker&useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false";
@@ -32,6 +33,7 @@ test.environment([
     "WELCOME_MESSAGE": "Hello from test",
     "SPRING_DATASOURCE_URL": testDbUrl,
     "MANAGEMENT_SECURITY_ENABLED": false,
+    "HTTPS_DISABLED":true
 ])
 
 flyway {
